[package]
edition = "2021"
name = "lowestbins"
version = "1.3.3"
authors = ["Tricked-dev <tricked@tricked.pro>"]
description = "Lowestbins made in rust for maximum efficiency"
repository = "https://github.com/tricked-dev/lowestbins"
documentation = "https://docs.rs/lowestbins"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lb.tricked.pro"
categories = ["command-line-utilities"]
exclude = [".vscode/settings.json", "makefile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = true
codegen-units = 1
incremental = true
opt-level = 'z'

[profile.release.package."*"]
opt-level = 3

[features]
default = ["simd"]
simd = ["simd-json"]

[dependencies]
# Async
futures-util = "0.3.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.6", optional = true }
hematite-nbt = "0.5.2"
dashmap = { version = "5.4", features = ["serde"] }
base64 = { version = "0.13" }
# Tracing
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0.3.15"
# HTTP
hyper = { version = "0.14", features = [
    "server",
    "runtime",
    "stream",
    "http1",
    "http2",
] }
isahc = { version = "1.7.2", default-features = false, features = ["http2"] }
# Misc
ctrlc = "3.2"
flate2 = "1"
once_cell = "1"
anyhow = { version = "1.0.65", features = ["backtrace"] }

[build-dependencies]
colored = "2.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
no-default-features = true
