[package]
edition = "2021"
name = "lowestbins"
version = "1.5.0"
authors = ["Tricked-dev <tricked@tricked.pro>"]
description = "Lowestbins made in rust for maximum efficiency"
repository = "https://github.com/tricked-dev/lowestbins"
documentation = "https://docs.rs/lowestbins"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://lb.tricked.pro"
categories = ["command-line-utilities"]
exclude = [".vscode/settings.json", "makefile"]
default-run = "lowestbins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
strip = true
incremental = true
opt-level = 's'
panic = 'abort'

[profile.release.package."*"]
opt-level = 3

[features]
default = []

[[bin]]
name = "update_display_names"
path = "./update_display_names.rs"

[dependencies]
# Async
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# Serde
serde = { version = "1", features = ["derive", "unstable"] }
serde_json = "1"
hematite-nbt = "0.5.2"
dashmap = { version = "5", features = ["serde"] }
base64 = "0"
# Tracing
tracing = { version = "0", features = [] }
tracing-subscriber = { version = "0.3", features = [
    "once_cell",
    "parking_lot",
    "serde",
    "serde_json"
] }
# HTTP
hyper = { version = "0.14", features = [
    "server",
    "runtime",
    "stream",
    "http1",
    "http2",
    "nightly"
] }
# Misc
flate2 = "1"
once_cell = { version = "1", features = ["parking_lot"] }
anyhow = { version = "1", features = ["backtrace"] }
mimalloc = { version = "0", default-features = false }
parking_lot = { version = "0.12", features = ["serde", "arc_lock", "nightly"] }
quote = "1"
reqwest = { version = "0.11.20", default-features = false, features = ["http3"] }

[build-dependencies]
colored = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1.0.23"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rmp-serde = "1"

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
no-default-features = true
